<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"

        >
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:padding="4dp"
                                            android:layout_margin="4dp"
                                            card_view:cardBackgroundColor="@color/colorBlue"

            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_gravity="center"
                          android:layout_marginTop="4dp"
                          android:layout_marginRight="4dp"
                          android:layout_marginLeft="4dp"
                          android:layout_marginBottom="4dp"
                          android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="start|center_vertical"
                    android:padding="4dp"
                    android:text="@string/server_info"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_ftp_connection_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:hint="@string/ftp_connection_name_hint"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              xmlns:tools="http://schemas.android.com/tools"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_ftp_server_ip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:hint="@string/ftp_server_ip_hint"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_ftp_server_port"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:hint="@string/ftp_server_port_hint"/>
                    </android.support.design.widget.TextInputLayout>
            </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_ftp_server_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:hint="@string/ftp_server_username_hint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_ftp_server_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:hint="@string/ftp_server_password_hint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_ftp_server_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:hint="@string/ftp_server_destination_hint"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:padding="4dp"
                                            android:layout_margin="4dp"
                                            card_view:cardBackgroundColor="@color/colorLightBlue"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_gravity="center"
                          android:layout_marginTop="4dp"
                          android:layout_marginRight="4dp"
                          android:layout_marginLeft="4dp"
                          android:layout_marginBottom="4dp"
                          android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:gravity="start|center_vertical"
                android:padding="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/source_list"/>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              android:orientation="vertical"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:id="@+id/edit_ftp_source_list">
                </LinearLayout>
                <Button
                    android:id="@+id/edit_ftp_add_source_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plus"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>